Fix alignment, add changelog

--- a/frontend/pages/queries/ManageQueriesPage/_styles.scss
+++ b/frontend/pages/queries/ManageQueriesPage/_styles.scss
@@ -252,7 +252,11 @@
       }
 
       &__inner-text {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
         width: 485px;
+
         img {
           width: 12px;
           position: relative;
